--- a/biblist.bib
+++ b/biblist.bib
@@ -258,3 +258,12 @@ pages="501--512",
   howpublished = {\url{https://github.com/cao-/Domain-segmentation}}
   %note = {Accessed: 2010-09-30}
 }
+
+@INPROCEEDINGS{wendland_2002,
+    author = {Holger Wendland},
+    title = {Fast Evaluation of Radial Basis Functions: Methods Based on Partition of Unity},
+    booktitle = {Approximation Theory X: Wavelets, Splines, and Applications},
+    year = {2002},
+    pages = {473--483},
+    publisher = {Vanderbilt University Press}
+}
