--- a/first-page.tex
+++ b/first-page.tex
@@ -2,16 +2,20 @@
 \null
 \vskip-2cm
 \bgroup
+\vskip-1cm
+\picw1.4in
+\centerline{\inspic{unimib.pdf}}
 \vsize=8.3in
-\typosize[17/]
-\centerline{UNIVERSITÀ DEGLI STUDI DI MILANO-BICOCCA}
-\vskip.5cm
+%\typosize[17/]
+%\centerline{UNIVERSITÀ DEGLI STUDI DI MILANO-BICOCCA}
+%\vskip.5cm
 \hbox to\hsize{\kern0.37in{\leaders\hrule height 1.07pt\hss}\kern0.37in}
-\vskip.5cm
+\vskip.4cm
 \scalemain\typoscale[1000/1000]
 \centerline{\rm DIPARTIMENTO DI MATEMATICA E APPLICAZIONI}
 \vskip 10pt
 \centerline{\rm Corso di Laurea Magistrale in \bf Matematica}
+\vskip-10pt
 
 \vfill
 \bgroup
@@ -25,15 +29,15 @@
 \egroup
 
 \vfill
-\line{\it Candidate:\hfil Advisor:\/}%
+\line{\it Relatore:\hfil Candidato:\/}%
   \medskip
 \line{%
     \def\\{\unskip\break\ignorespaces}%
     \parindent=0pt
     \parfillskip=0pt
-    \vtop{\rightskip=0pt plus 1fill \uppercase{Matteo Caoduro}}%
+    \vtop{\rightskip=0pt plus 1fill Prof.ssa\\ {\caps\rm Milvia Francesca Rossini}}%
     \hss
-    \vtop{\leftskip=0pt plus 1fill Prof.ssa \uppercase{Milvia\\ Francesca Rossini}}%
+    \vtop{\leftskip=0pt plus 1fill{\caps\rm Matteo Caoduro}\\766881}%
 }%
 
 \vfill
