--- a/thesis.tex
+++ b/thesis.tex
@@ -90,13 +90,14 @@
 \sec[buildingsec] Building a regularity classifier
 \input building-a-regularity-classifier
 
-\sec Invariance of the regularity vector
-\input invariance-of-the-regularity-vector
+\sec Invariance properties
+\input invariance-properties
 
 \sec[numericalsec] Numerical examples
 \input numerical-examples
 
-\chap Dealing with discontinuities
+\chap Discontinuities detection\nl ^^J
+      and reconstruction
 % two-dimensional discontinuities
 
 \sec Domain segmentation
