--- a/thesis-mac.tex
+++ b/thesis-mac.tex
@@ -79,7 +79,7 @@
    \edef\currfootline{\the\footline}%
    \footline={\rlap{\line{\currfootline}}\hfil\rm\folio\hfil\ea\global\ea\footline\ea{\currfootline}}%  
    {\_chapfont \_noindent \_mtext{chap} \_printrefnum[@]\_par
-    \_nobreak\_smallskip
+    \_nobreak\_smallskip\let\NL\nl
     \_noindent \_raggedright \uppercase{#1}\_nbpar}\_mark{}%
    \_nobreak \_belowtitle{\_bigskip}%
    \_firstnoindent
