--- a/domain-segmentation.tex
+++ b/domain-segmentation.tex
@@ -114,3 +114,7 @@ A full implementation of the described algorithm, written in the MATLAB language
 % The local discrete domain, namely the set of points~$X_C$, can be turned into an actual subdomain of~$\Omega$ by taking the union of all the triangles of~$T$ that have all the vertices in~$X_C$. 
 
 % To .... clear, the full algorithm is summed up in a pseudocode language.
+
+
+
+\nonum\secc Examples
