--- a/positive-definite-functions.tex
+++ b/positive-definite-functions.tex
@@ -70,6 +70,7 @@ $$
 \noindent This theorem allows us to build positive definite functions, that work for any space dimension, simply by finding completely monotone functions and then composing  them with the square function.
 
 \preskip
+\label[gaussianex]
 \example[(Gaussian)] The function
 $$
 \psi(r)=e^{-r}
