--- a/thesis.tex
+++ b/thesis.tex
@@ -103,11 +103,11 @@
 \sec Domain segmentation
 %Boundary detection ???
 \input domain-segmentation
+       \input domain-segmentation-examples
 
 \sec Reconstruction
 \input reconstruction
-
-\sec Some examples
+       \input reconstruction-examples
 
 
 
