--- a/biblist.bib
+++ b/biblist.bib
@@ -267,3 +267,27 @@ pages="501--512",
     pages = {473--483},
     publisher = {Vanderbilt University Press}
 }
+
+
+
+@book{christmann-steinwart_2008,
+author = {Christmann, Andreas and Steinwart, Ingo},
+year = {2008},
+month = {01},
+%pages = {},
+title = {Support Vector Machines},
+%isbn = {978-0-387-77241-7},
+journal = {Support Vector Machines: , Information Science and Statistics. Springer Science+Business Media, LLC, 2008},
+%doi = {10.1007/978-0-387-77242-4}
+}
+
+
+@inproceedings{ha_quang-niyogi-yao_1970,
+author = {Ha Quang, Minh and Niyogi, Partha and Yao, Yuan},
+year = {1970},
+month = {01},
+pages = {154--168},
+title = {Mercer’s Theorem, Feature Maps, and Smoothing},
+%isbn = {978-3-540-35294-5},
+%doi = {10.1007/11776420_14}
+}
